@@ -1,4 +1,4 @@
-AC_INIT([mbuffer],[20171011])
+AC_INIT([mbuffer],[20180318])
 AC_CONFIG_HEADER([config.h])
 AC_CONFIG_SRCDIR([mbuffer.c])
 
@@ -86,6 +86,7 @@ AC_PROG_INSTALL
 AC_PATH_PROG(RM,rm)
 AC_PATH_PROG(CP,cp)
 AC_PATH_PROG(MT,mt,AC_MSG_WARN(could not find the program mt - you might need this if you want autoloader support))
+AC_PATH_PROGS(TAR,[gtar tar])
 AC_TYPE_SIGNAL
 AC_SYS_LARGEFILE
 AC_STRUCT_ST_BLKSIZE
