@@ -1,3 +1,10 @@
+20180318:
+- performance optimized defaults
+- stricter arguments checking of mbuffer.rc
+- handle FreeBSD's maximum semaphore value transparently
+- print base 2 dimensions correctly (ki,Mi,Gi,Ti)
+- FreeBSD patches by Eric Borisch
+
 20171011:
 - use $(etcdir) consistently for installation
 - use AC_COMPILE_IF instead of AC_RUN_IF to support cross-compiling
